# kde3-kdepim

./: CMakeLists.txt  ConfigureChecks.cmake  MAINTAINERS  Makefile.am  Makefile.in  config.h.cmake  config.h.in  configure  configure.files  configure.in  subdirs
certmanager/: CMakeLists.txt  ConfigureChecks.cmake  Makefile.in  aboutdata.cpp  aboutdata.h  certificateinfowidgetimpl.cpp  certificateinfowidgetimpl.h  certificatewizardimpl.cpp  certificatewizardimpl.h  certlistview.cpp  certlistview.h  certmanager.cpp  certmanager.h  crlview.cpp  crlview.h  customactions.cpp  customactions.h  hierarchyanalyser.cpp  hierarchyanalyser.h  main.cpp  storedtransferjob.cpp  storedtransferjob.h
indexlib/: CMakeLists.txt  ConfigureChecks.cmake  Makefile.in  bitio.h  bitstream.cpp  bitstream.h  compat.h  compressed.cpp  compressed.h  create.cpp  create.h  exception.cpp  exception.h  format.h  ifile.cpp  ifile.h  index.h  index_slow.h  leafdata.cpp  leafdata.h  leafdatavector.cpp  leafdatavector.h  lockfile.cpp  lockfile.h  logfile.cpp  logfile.h  main.cpp  manager.h  match.cpp  match.h  mempool.h  memreference.h  memvector.h  memvector.tcc  mmap_manager.cpp  mmap_manager.h  path.h  pointer.h  quotes.cpp  quotes.h  (+11 more)
kaddressbook/: CMakeLists.txt  Makefile.in  addresseditwidget.cpp  addresseditwidget.h  addresseeconfig.cpp  addresseeconfig.h  addresseeeditorbase.h  addresseeeditordialog.cpp  addresseeeditordialog.h  addresseeeditorextension.cpp  addresseeeditorextension.h  addresseeeditorwidget.cpp  addresseeeditorwidget.h  addresseeutil.cpp  addresseeutil.h  addviewdialog.cpp  addviewdialog.h  advancedcustomfields.cpp  advancedcustomfields.h  contacteditorwidgetmanager.cpp  contacteditorwidgetmanager.h  customfieldswidget.cpp  customfieldswidget.h  distributionlisteditor.cpp  distributionlisteditor.h  distributionlisteditor_p.h  distributionlistentryview.cpp  distributionlistentryview.h  distributionlistpicker.cpp  distributionlistpicker.h  emaileditwidget.cpp  emaileditwidget.h  extensionmanager.cpp  extensionmanager.h  filtereditdialog.cpp  filtereditdialog.h  filterselectionwidget.cpp  filterselectionwidget.h  freebusywidget.cpp  freebusywidget.h  (+58 more)
kalarm/: CMakeLists.txt  Makefile.in  alarmcalendar.cpp  alarmcalendar.h  alarmevent.cpp  alarmevent.h  alarmlistview.cpp  alarmlistview.h  alarmtext.cpp  alarmtext.h  alarmtimewidget.cpp  alarmtimewidget.h  birthdaydlg.cpp  birthdaydlg.h  calendarcompat.cpp  calendarcompat.h  daemon.cpp  daemon.h  dcophandler.cpp  dcophandler.h  deferdlg.cpp  deferdlg.h  editdlg.cpp  editdlg.h  editdlgprivate.h  emailidcombo.cpp  emailidcombo.h  eventlistviewbase.cpp  eventlistviewbase.h  find.cpp  find.h  fontcolour.cpp  fontcolour.h  fontcolourbutton.cpp  fontcolourbutton.h  functions.cpp  functions.h  kalarmapp.cpp  kalarmapp.h  kalarmiface.h  (+48 more)
karm/: CMakeLists.txt  Makefile.in  csvexportdialog.cpp  csvexportdialog.h  desktoptracker.cpp  desktoptracker.h  edittaskdialog.cpp  edittaskdialog.h  idletimedetector.cpp  idletimedetector.h  kaccelmenuwatch.cpp  kaccelmenuwatch.h  karm_part.cpp  karm_part.h  karmdcopiface.h  karmerrors.h  karmstorage.cpp  karmstorage.h  karmutility.cpp  karmutility.h  ktimewidget.cpp  ktimewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  plannerparser.cpp  plannerparser.h  preferences.cpp  preferences.h  print.cpp  print.h  printdialog.cpp  printdialog.h  reportcriteria.h  task.cpp  task.h  taskview.cpp  taskview.h  taskviewwhatsthis.cpp  taskviewwhatsthis.h  (+5 more)
kgantt/: CMakeLists.txt  Makefile.in
kioslaves/: CMakeLists.txt  ConfigureChecks.cmake  Makefile.am  Makefile.in
kmail/: CMakeLists.txt  Makefile.in  aboutdata.cpp  aboutdata.h  accountcombobox.cpp  accountcombobox.h  accountdialog.cpp  accountdialog.h  accountmanager.cpp  accountmanager.h  accountwizard.cpp  accountwizard.h  acljobs.cpp  acljobs.h  actionscheduler.cpp  actionscheduler.h  annotationjobs.cpp  annotationjobs.h  antispamconfig.cpp  antispamconfig.h  antispamwizard.cpp  antispamwizard.h  app_octetstream.cpp  attachmentcollector.cpp  attachmentcollector.h  attachmentlistview.cpp  attachmentlistview.h  attachmentstrategy.cpp  attachmentstrategy.h  bodypartformatter.cpp  bodypartformatter.h  bodypartformatterfactory.cpp  bodypartformatterfactory.h  bodypartformatterfactory_p.h  bodyvisitor.cpp  bodyvisitor.h  cachedimapjob.cpp  cachedimapjob.h  callback.cpp  callback.h  (+351 more)
kmailcvt/: CMakeLists.txt  Makefile.in  filter_mailapp.cxx  kimportpage.cpp  kimportpage.h  kmailcvt.cpp  kmailcvt.h  kselfilterpage.cpp  kselfilterpage.h  main.cpp
kmobile/: CMakeLists.txt  Makefile.in  kmobile.cpp  kmobile.h  kmobileclient.cpp  kmobileclient.h  kmobiledevice.cpp  kmobiledevice.h  kmobileiface.h  kmobileitem.cpp  kmobileitem.h  kmobileview.cpp  kmobileview.h  main.cpp  pref.cpp  pref.h  systemtray.cpp  systemtray.h  testlibkmobile.cpp
knode/: CMakeLists.txt  Makefile.in  aboutdata.cpp  aboutdata.h  articlewidget.cpp  articlewidget.h  csshelper.cpp  csshelper.h  headerview.cpp  headerview.h  knaccountmanager.cpp  knaccountmanager.h  knapplication.cpp  knapplication.h  knarticle.cpp  knarticle.h  knarticlecollection.cpp  knarticlecollection.h  knarticlefactory.cpp  knarticlefactory.h  knarticlefilter.cpp  knarticlefilter.h  knarticlemanager.cpp  knarticlemanager.h  knarticlewindow.cpp  knarticlewindow.h  kncleanup.cpp  kncleanup.h  kncollection.cpp  kncollection.h  kncollectionview.cpp  kncollectionview.h  kncollectionviewitem.cpp  kncollectionviewitem.h  kncomposer.cpp  kncomposer.h  knconfig.cpp  knconfig.h  knconfigmanager.cpp  knconfigmanager.h  (+74 more)
knotes/: CMakeLists.txt  KNotesAppIface.h  KNotesIface.h  Makefile.in  knote.cpp  knote.h  knotealarmdlg.cpp  knotealarmdlg.h  knotebutton.cpp  knotebutton.h  knoteconfigdlg.cpp  knoteconfigdlg.h  knoteedit.cpp  knoteedit.h  knotehostdlg.cpp  knotehostdlg.h  knoteprinter.cpp  knoteprinter.h  knotesalarm.cpp  knotesalarm.h  knotesapp.cpp  knotesapp.h  knotesglobalconfig.kcfgc  knoteslegacy.cpp  knoteslegacy.h  knotesnetrecv.cpp  knotesnetrecv.h  knotesnetsend.cpp  knotesnetsend.h  main.cpp  main.h  pushpin.xpm  resourcelocal.cpp  (+8 more)
(+3200 files in other folders)
